# hello_world

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/CO2/: CMakeLists.txt  CO2.c
components/CO2/include/: CO2.h
components/DHT11/: CMakeLists.txt  DHT11.c
components/DHT11/include/: DHT11.h
components/GY30/: CMakeLists.txt  GY30.c
components/GY30/include/: GY30.h
components/MQ2/: CMakeLists.txt  MQ2.c
components/MQ2/include/: MQ2.h
components/MQ7/: CMakeLists.txt  MQ7.c
components/MQ7/include/: MQ7.h
components/WiFiConnect/: CMakeLists.txt  WiFiConnect.c
components/WiFiConnect/include/: WiFiConnect.h
components/aliyunMQTT/: CMakeLists.txt  aliyunMQTT.c
components/aliyunMQTT/include/: aliyunMQTT.h
components/lvgl_esp32_drivers/: lvgl_helpers.h
main/: CMakeLists.txt  hello_world_main.c
